--- a/Luxortum_HTTP_Carnets.ipynb
+++ b/Luxortum_HTTP_Carnets.ipynb
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "class MyHandler(http.server.SimpleHTTPRequestHandler):\n",
+    "class MyHandler(HTTP.server.SimpleHTTPRequestHandler):\n",
     "    def do_GET(self):\n",
     "        if self.path == \"/\":\n",
     "            self.path = \"index.html\"\n",
